# python-bc-aula20

./: README.md  compose.yaml  hello.py  pyproject.toml
backend/: Dockerfile  crud.py  database.py  models.py  pyproject.toml  requirements.txt  router.py  schemas.py
frontend/: Dockerfile  requirements.txt
